--- a/Service/src/main/resources/application.properties
+++ b/Service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/mydb
-spring.datasource.username = root
-spring.datasource.password = P;neappl3
+ spring.datasource.url = jdbc:mysql://192.168.0.2:3306/birds_bees?useSSL=false&allowPublicKeyRetrieval=true
+ spring.datasource.username = root
+ spring.datasource.password = P;neappl3
 
 
 ## Hibernate Properties
