--- a/Service/src/main/resources/application.properties
+++ b/Service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
- spring.datasource.url = jdbc:mysql://192.168.0.2:3307/birds_bees?useSSL=false&allowPublicKeyRetrieval=true
+ spring.datasource.url = jdbc:mysql://192.168.0.2:3306/birds_bees?useSSL=false&allowPublicKeyRetrieval=true
  spring.datasource.username = root
- spring.datasource.password = pineapple
+ spring.datasource.password = my-secret-pw
 
 
 ## Hibernate Properties
